Fixed bleeding style

--- a/less/tables.less
+++ b/less/tables.less
@@ -6,7 +6,6 @@
 
 th {
   text-align: left;
-  background-color: @gray-even-lighter;
 }
 
 // Zebra-striping
